[package]
name = "hilbert_geometry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "hilbert_geometry"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.2.2", features = ["vtab-loadable", "vscalar", "vtab-arrow"] }
duckdb-loadable-macros = "0.1.5"
geo-traits = "0.3.0"
geo-types = "0.7.16"
hilbert-geometry = "0.1.4"
libduckdb-sys = { version = "1.2.2", features = ["loadable-extension"] }
wkb = "0.9.0"
